--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,29 @@
 <!DOCTYPE html>
+<!--
+               .<@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@>. 
+            .<@@@@@@   $$$$$$$$$$$$$$$$$$$$$\^^^^^^/$$$$@@@>. 
+         .<@@@@@<   .$$$$$'~       '~'$$$$$$$\  /$$$$$$>@@@@@>. 
+      .<@@@@@<'   o$$$$$$                `'$$$$$$$$$$$$  '>@@@@@>. 
+   .<@@@@@<'    o$$$$$$oo.                  )$$$$$$$$$$     '>@@@@@>. 
+   '<@@@@@<    o$$$$$$$$$$$.                                 >@@@@@>' 
+     '<@@@@<  o$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$oooooo...    >@@@@>' 
+       '@@@@< $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$)>@@@@>' 
+         '<@@@@$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$@@@@>' 
+           '<@@@@$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$@@@@>' 
+             '<@@@@<    .oooo.                    .$$@@@@>' 
+               '<@@@@oo$$$$$$$o..             ..o$$@@@@>' 
+                 '<@@@@$$$$$$$$$$$$$oooooooo$$$$$@@@@>' 
+                   '<@@@@'$$$$$$$$$$$$$$$$$$$$$@@@@>' 
+                     '<@@@@<   ~"SSSSSS"~   >@@@@>' 
+                       '<@@@@<            >@@@@>' 
+                         '<@@@@<        >@@@@>' 
+                           '<@@@@<    >@@@@>' 
+                             '<@@@@<>@@@@>' 
+                               '<@@@@@@>' 
+                                 '<@@>' 
+                                   ^^    
+
+-->
 <html>
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
